--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "type": "module",
   "dependencies": {
     "assemblyscript": "^0.27.36",
-    "express": "^5.1.0",
-    "mime-types": "^3.0.1"
+    "express": "^5.1.0"
   }
 }
